--- a/Changes
+++ b/Changes
@@ -12,3 +12,7 @@ Revision history for Fukurama-Class
 0.021	2008-01-04
 		bugfix: tests Rigid, Tree, Class and Implements adapted for curiosities in perl 5.10
 		bugfix: GLOB-reference-test adapted for curiosities in perl 5.10
+
+0.0.22	2008-01-05
+		bugfix: lax int-overflow test for os with other int-sizes
+ 
