--- a/Changes
+++ b/Changes
@@ -21,6 +21,9 @@ Revision history for Fukurama-Class
 		bugfix: decrease float-overflow test distance to avoid overflow in test itself
 		bugfix: increase distance for decimal-overflow test to force overflow in test
 
-0.024	2008.01.15
+0.024	2008-01-15
 		bugfix: extend overflow-tests to find overfloating for actual system
 		bugfix: fix package-string for version tests
+
+0.025	2008-01-15
+		bugfix: fix detection for overflow-marks for different OS
