--- a/Changes
+++ b/Changes
@@ -27,3 +27,10 @@ Revision history for Fukurama-Class
 
 0.025	2008-01-15
 		bugfix: fix detection for overflow-marks for different OS
+
+0.026	2008-01-24
+		insert module dependencies into the makefile
+		laxed data-type tests tightened
+
+0.027	2008-03-12
+		search for overflow-sign extendet
