Import of TOBIWAN/Fukurama-Class-0.028 from CPAN.
gitpan-cpan-distribution: Fukurama-Class
gitpan-cpan-version:      0.028
gitpan-cpan-path:         TOBIWAN/Fukurama-Class-0.028.tar.gz
gitpan-cpan-author:       TOBIWAN
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -34,3 +34,6 @@ Revision history for Fukurama-Class
 
 0.027	2008-03-12
 		search for overflow-sign extendet
+
+0.028	2008-03-12
+		bugfix: POD for implements-syntax changed
